--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -2,17 +2,17 @@
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:1741",
+      "applicationUrl": "https://localhost:44313",
       "sslPort": 44313
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "index.html",
+      "launchBrowser": false,
+      "launchUrl": "magic.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
