first page of application debug mode will be login

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -11,8 +11,8 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
-      "launchUrl": "magic.html",
+      "launchBrowser": true,
+      "launchUrl": "login",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
