--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "login",
       "applicationUrl": "https://localhost:44313;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
