--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -4,9 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Mail": {
-    "Mail": "pskalmamater@gmail.com",
-    "Password": "kompiuteris"
-  }
+  "AllowedHosts": "*"
 }
