--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Mail": {
+    "Mail": "pskalmamater@gmail.com",
+    "Password": "kompiuteris"
+  }
 }
